mock-exams/topic-wise/ServicesAndNetworking/network-policies/q1/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-svc
  name: api-svc
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-svc
  type: NodePort
status:
  loadBalancer: {}
