mock-exams/topic-wise/ServicesAndNetworking/network-policies/q1/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-svc
  name: frontend-svc
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend-svc
  type: ClusterIP
status:
  loadBalancer: {}
