mock-exams/topic-wise/ServicesAndNetworking/network-policies/q1/web-ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: api-svc
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
